# file_sender

./: CMakeLists.txt  README.md
cli-client/: CMakeLists.txt  main.cpp
cli-server/: CMakeLists.txt  main.cpp
connection/: AbstractConnection.cpp  AbstractConnection.h  ClientConnection.cpp  ClientConnection.h  ConnectionPool.cpp  ConnectionPool.h  ServerConnection.cpp  ServerConnection.h
exceptions/: ConfigException.cpp  ConfigException.h  ConnectionException.cpp  ConnectionException.h  CustomException.cpp  CustomException.h  FileException.cpp  FileException.h
files/: FileHolder.cpp  FileHolder.h
libs/include/: directory_helpers.h
libs/sources/: directory_helpers.cpp
log/: Log.cpp  Log.h
server/: Server.cpp  Server.h  ServerConfigurator.cpp  ServerConfigurator.h
